# fastarena-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  USAGE.md
.github/workflows/: ci.yml
benches/: arena_bench.rs  arena_comparison.rs
examples/: arena_vec.rs  basic_allocation.rs  budgets.rs  checkpoint_rewind.rs  drop_tracking.rs  fallible.rs  real_world.rs  savepoints.rs  stats.rs  transactions.rs
src/: lib.rs  macros.rs
src/arena/: allocator.rs  block.rs  boxed.rs  mod.rs  stats.rs
src/util/: drop_registry.rs  inline_vec.rs  mod.rs  transaction.rs
src/vec/: arena_vec.rs  mod.rs
tests/: advanced_tests.rs  arena_vec.rs  arena_vec_macro.rs  block.rs  inline_vec.rs
